--- a/ReactNativeTsZs/ios/ReactNativeTsZs/Info.plist
+++ b/ReactNativeTsZs/ios/ReactNativeTsZs/Info.plist
@@ -2,6 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+<key>Configurations</key>
+	<dict>
+		<key>Debug</key>
+		<string>dev</string>
+		<key>Release</key>
+		<string>prod</string>
+	</dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
